--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
     sdk: flutter
   http: ^0.13.5
   flutter_phoenix: ^1.1.0
+  badges: ^2.0.3
+  wakelock: ^0.6.2
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
